tests/Checker/everything/errors/17c.vc
int main() {
    int a[3] = {1, 2, 3};
    float b = 1.0;
    a[b];
    return 1;
}
